--- a/hearth/index.html
+++ b/hearth/index.html
@@ -32,6 +32,9 @@
                         </ul>
                     </nav>
                 </div>
+                <div class="header__logo">
+                    <img src="./img/logo.svg" alt="Логотип" class="header__logo-img">
+                </div>
                 <div class="header__side">
                     <div class="header__contacts">
                         <span class="button button_recall">Звоните, мы работаем</span>
@@ -66,7 +69,7 @@
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
-                                                <sapn class="cart__weight">810 р</sapn>
+                                                <sapn class="cart__price">8910 р</sapn>
                                             </div>
                                             <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
                                         </div>
@@ -79,7 +82,7 @@
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
-                                                <sapn class="cart__weight">810 р</sapn>
+                                                <sapn class="cart__price">810 р</sapn>
                                             </div>
                                             <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
                                         </div>
@@ -92,7 +95,7 @@
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
-                                                <sapn class="cart__weight">810 р</sapn>
+                                                <sapn class="cart__price">810 р</sapn>
                                             </div>
                                             <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
                                         </div>
@@ -207,6 +210,7 @@
                             <div class="promo__sticker">
                                 <span>-20%</span>
                             </div>
+                            <img src="./img/promo_bg.png" alt="" class="promo__bg">
                         </div>
                         <div class="swiper-slide promo__item">
                             <div class="promo__content">
@@ -217,6 +221,7 @@
                             <div class="promo__sticker">
                                 <span>-20%</span>
                             </div>
+                            <img src="./img/promo_bg.png" alt="" class="promo__bg">
                         </div>
                         <div class="swiper-slide promo__item">
                             <div class="promo__content">
@@ -227,6 +232,7 @@
                             <div class="promo__sticker">
                                 <span>-20%</span>
                             </div>
+                            <img src="./img/promo_bg.png" alt="" class="promo__bg">
                         </div>
                     </div>
                     <div class="promo__pagination"></div>
@@ -284,6 +290,11 @@
                         <div class="filter__weight">
                             <span class="filter__weight-text">Выберите вес:</span>
                             <div class="filter__weight-labels">
+                                <label class="filter__weight-label">
+                                    <input type="checkbox" name="weight" value="1200">
+                                    <span class="filter__weight-checkbox"></span>
+                                    <span class="filter__weight-value">1400 г</span>
+                                </label>
                                 <label class="filter__weight-label">
                                     <input type="checkbox" name="weight" value="1200">
                                     <span class="filter__weight-checkbox"></span>
