--- a/hearth/index.html
+++ b/hearth/index.html
@@ -115,6 +115,8 @@
         </div>
     </header>
     <section class="banner">
+        <img src="./img/banner_bg.png" alt="Фон" class="banner__bg">
+        <img src="./img/banner_bg-m.png" alt="Фон" class="banner__bg-m">
         <div class="container">
             <div class="banner__content">
                 <div class="banner__logo-wrap">
