--- a/hearth/index.html
+++ b/hearth/index.html
@@ -371,7 +371,7 @@
                             <span class="product__art">Арт 107</span>
                             <a href="#" class="product__rev">Отзывы (63) Получить скидку 10%</a>
                         </div>
-                        <div class="product__body">
+                        <form class="product__body">
                             <h3 class="product__name">Пирог с сыром</h3>
                             <fieldset class="product__weight">
                                 <legend>Вес/Диаметр</legend>
@@ -405,9 +405,9 @@
                             </fieldset>
                             <div class="product__bottom">
                                 <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
-                                <button class="button button_product">В корзину</button>
+                                <button type="submit" class="button button_product">В корзину</button>
                             </div>
-                        </div>
+                        </form>
                     </div>
                     <div class="product">
                         <div class="product__top">
@@ -415,7 +415,7 @@
                             <span class="product__art">Арт 107</span>
                             <a href="#" class="product__rev">Отзывы (63) Получить скидку 10%</a>
                         </div>
-                        <div class="product__body">
+                        <form class="product__body">
                             <h3 class="product__name">Пирог с сыром</h3>
                             <fieldset class="product__weight">
                                 <legend>Вес/Диаметр</legend>
@@ -449,9 +449,9 @@
                             </fieldset>
                             <div class="product__bottom">
                                 <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
-                                <button class="button button_product">В корзину</button>
+                                <button type="submit" class="button button_product">В корзину</button>
                             </div>
-                        </div>
+                        </form>
                     </div>
                     <div class="product">
                         <div class="product__top">
@@ -459,7 +459,7 @@
                             <span class="product__art">Арт 107</span>
                             <a href="#" class="product__rev">Отзывы (63) Получить скидку 10%</a>
                         </div>
-                        <div class="product__body">
+                        <form class="product__body">
                             <h3 class="product__name">Пирог с сыром</h3>
                             <fieldset class="product__weight">
                                 <legend>Вес/Диаметр</legend>
@@ -493,9 +493,9 @@
                             </fieldset>
                             <div class="product__bottom">
                                 <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
-                                <button class="button button_product">В корзину</button>
+                                <button type="submit" class="button button_product">В корзину</button>
                             </div>
-                        </div>
+                        </form>
                     </div>
                     <div class="product">
                         <div class="product__top">
@@ -503,7 +503,7 @@
                             <span class="product__art">Арт 107</span>
                             <a href="#" class="product__rev">Отзывы (63) Получить скидку 10%</a>
                         </div>
-                        <div class="product__body">
+                        <form class="product__body">
                             <h3 class="product__name">Пирог с сыром</h3>
                             <fieldset class="product__weight">
                                 <legend>Вес/Диаметр</legend>
@@ -537,9 +537,9 @@
                             </fieldset>
                             <div class="product__bottom">
                                 <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
-                                <button class="button button_product">В корзину</button>
+                                <button type="submit" class="button button_product">В корзину</button>
                             </div>
-                        </div>
+                        </form>
                     </div>
                     <div class="product">
                         <div class="product__top">
@@ -547,7 +547,7 @@
                             <span class="product__art">Арт 107</span>
                             <a href="#" class="product__rev">Отзывы (63) Получить скидку 10%</a>
                         </div>
-                        <div class="product__body">
+                        <form class="product__body">
                             <h3 class="product__name">Пирог с сыром</h3>
                             <fieldset class="product__weight">
                                 <legend>Вес/Диаметр</legend>
@@ -581,9 +581,9 @@
                             </fieldset>
                             <div class="product__bottom">
                                 <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
-                                <button class="button button_product">В корзину</button>
+                                <button type="submit" class="button button_product">В корзину</button>
                             </div>
-                        </div>
+                        </form>
                     </div>
                     <div class="product">
                         <div class="product__top">
@@ -591,7 +591,7 @@
                             <span class="product__art">Арт 107</span>
                             <a href="#" class="product__rev">Отзывы (63) Получить скидку 10%</a>
                         </div>
-                        <div class="product__body">
+                        <form class="product__body">
                             <h3 class="product__name">Пирог с сыром</h3>
                             <fieldset class="product__weight">
                                 <legend>Вес/Диаметр</legend>
@@ -625,9 +625,9 @@
                             </fieldset>
                             <div class="product__bottom">
                                 <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
-                                <button class="button button_product">В корзину</button>
+                                <button type="submit" class="button button_product">В корзину</button>
                             </div>
-                        </div>
+                        </form>
                     </div>
                 </div>
                 <div class="products__btn-wrap">
