--- a/hearth/index.html
+++ b/hearth/index.html
@@ -114,7 +114,7 @@
             </div>
         </div>
     </header>
-    <section class="banner">
+    <section id="banner" class="banner">
         <img src="./img/banner_bg.png" alt="Фон" class="banner__bg">
         <img src="./img/banner_bg-m.png" alt="Фон" class="banner__bg-m">
         <div class="container">
@@ -808,6 +808,12 @@
             </div>
         </div>
     </footer>
+
+    <button class="scroll-to-top js-scroll-to-top">
+        <svg xmlns="http://www.w3.org/2000/svg" width="10" height="15" viewBox="0 0 9.998 14.996">
+            <path id="button_arrow" data-name="button_arrow" d="M239,3714.5l.867-.794,7.39-6.7,1.742,1.589-6.515,5.91,6.515,5.91L247.255,3722l-7.39-6.7Z" transform="translate(-238.999 -3707.003)"/>
+        </svg> 
+    </button>
 
     <script src="./js/swiper-bundle.min.js"></script>
     <script src="./js/main.js"></script>
