--- a/hearth/index.html
+++ b/hearth/index.html
@@ -786,7 +786,7 @@
         <div class="footer__bottom">
             <div class="container">
                 <div class="footer__bottom-wrap">
-                    <span class="footer__copyright">2020 © Пекарня Очаг<span> ОГРН 316151300074546</span></span>
+                    <span class="footer__copyright">2020 © Пекарня Очаг<br>1-я Бухвостова 12/11 корпус 4 Преображенская Площадь<br><span> ОГРН 316151300074546</span></span>
                     <div class="footer__socials">
                         <a href="#" class="footer__social">
                             <svg xmlns="http://www.w3.org/2000/svg" id="Bold" enable-background="new 0 0 24 24" viewBox="0 0 24 24">
