--- a/hearth/index.html
+++ b/hearth/index.html
@@ -66,7 +66,11 @@
                                 <div class="cart__item">
                                     <div class="cart__name">С сыром осетинским</div>
                                     <div class="cart__content">
-                                        <img src="./img/product.png" alt="Фото товара" class="cart__img">
+                                        <picture class="cart__img">
+                                            <source srcset="./img/product.webp" type="image/webp">
+                                            <source srcset="./img/product.png" type="image/png">
+                                            <img src="./img/product.png" alt="Фото товара">
+                                        </picture>
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
@@ -79,7 +83,11 @@
                                 <div class="cart__item">
                                     <div class="cart__name">С сыром осетинским</div>
                                     <div class="cart__content">
-                                        <img src="./img/product.png" alt="Фото товара" class="cart__img">
+                                        <picture class="cart__img">
+                                            <source srcset="./img/product.webp" type="image/webp">
+                                            <source srcset="./img/product.png" type="image/png">
+                                            <img src="./img/product.png" alt="Фото товара">
+                                        </picture>
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
@@ -92,7 +100,11 @@
                                 <div class="cart__item">
                                     <div class="cart__name">С сыром осетинским</div>
                                     <div class="cart__content">
-                                        <img src="./img/product.png" alt="Фото товара" class="cart__img">
+                                        <picture class="cart__img">
+                                            <source srcset="./img/product.webp" type="image/webp">
+                                            <source srcset="./img/product.png" type="image/png">
+                                            <img src="./img/product.png" alt="Фото товара">
+                                        </picture>
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
@@ -244,6 +256,11 @@
                                 <span>-20%</span>
                             </div>
                             <img src="./img/promo_bg.png" alt="" class="promo__bg">
+                            <picture class="promo__bg">
+                                <source srcset="./img/promo_bg.webp" type="image/webp">
+                                <source srcset="./img/promo_bg.png" type="image/png">
+                                <img src="./img/promo_bg.png" alt="Фон">
+                            </picture>
                         </div>
                         <div class="swiper-slide promo__item">
                             <div class="promo__content">
@@ -372,7 +389,11 @@
                 <div class="products__wrap">
                     <div class="product">
                         <div class="product__top">
-                            <img src="./img/product.png" alt="Фото товара" class="product__img">
+                            <picture class="product__img">
+                                <source srcset="./img/product.webp" type="image/webp">
+                                <source srcset="./img/product.png" type="image/png">
+                                <img src="./img/product.png" alt="Фото товара">
+                            </picture>
                             <span class="product__art">Арт 107</span>
                             <a href="#" class="product__rev">Отзывы (63) Получить скидку 10%</a>
                         </div>
@@ -416,7 +437,11 @@
                     </div>
                     <div class="product">
                         <div class="product__top">
-                            <img src="./img/product.png" alt="Фото товара" class="product__img">
+                            <picture class="product__img">
+                                <source srcset="./img/product.webp" type="image/webp">
+                                <source srcset="./img/product.png" type="image/png">
+                                <img src="./img/product.png" alt="Фото товара">
+                            </picture>
                             <span class="product__art">Арт 107</span>
                             <a href="#" class="product__rev">Отзывы (63) Получить скидку 10%</a>
                         </div>
@@ -460,7 +485,11 @@
                     </div>
                     <div class="product">
                         <div class="product__top">
-                            <img src="./img/product.png" alt="Фото товара" class="product__img">
+                            <picture class="product__img">
+                                <source srcset="./img/product.webp" type="image/webp">
+                                <source srcset="./img/product.png" type="image/png">
+                                <img src="./img/product.png" alt="Фото товара">
+                            </picture>
                             <span class="product__art">Арт 107</span>
                             <a href="#" class="product__rev">Отзывы (63) Получить скидку 10%</a>
                         </div>
@@ -504,7 +533,11 @@
                     </div>
                     <div class="product">
                         <div class="product__top">
-                            <img src="./img/product.png" alt="Фото товара" class="product__img">
+                            <picture class="product__img">
+                                <source srcset="./img/product.webp" type="image/webp">
+                                <source srcset="./img/product.png" type="image/png">
+                                <img src="./img/product.png" alt="Фото товара">
+                            </picture>
                             <span class="product__art">Арт 107</span>
                             <a href="#" class="product__rev">Отзывы (63) Получить скидку 10%</a>
                         </div>
@@ -548,7 +581,11 @@
                     </div>
                     <div class="product">
                         <div class="product__top">
-                            <img src="./img/product.png" alt="Фото товара" class="product__img">
+                            <picture class="product__img">
+                                <source srcset="./img/product.webp" type="image/webp">
+                                <source srcset="./img/product.png" type="image/png">
+                                <img src="./img/product.png" alt="Фото товара">
+                            </picture>
                             <span class="product__art">Арт 107</span>
                             <a href="#" class="product__rev">Отзывы (63) Получить скидку 10%</a>
                         </div>
@@ -592,7 +629,11 @@
                     </div>
                     <div class="product">
                         <div class="product__top">
-                            <img src="./img/product.png" alt="Фото товара" class="product__img">
+                            <picture class="product__img">
+                                <source srcset="./img/product.webp" type="image/webp">
+                                <source srcset="./img/product.png" type="image/png">
+                                <img src="./img/product.png" alt="Фото товара">
+                            </picture>
                             <span class="product__art">Арт 107</span>
                             <a href="#" class="product__rev">Отзывы (63) Получить скидку 10%</a>
                         </div>
@@ -679,7 +720,11 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide review">
                                 <div class="review__img-wrap">
-                                    <img src="./img/product.png" alt="Фото отзыва" class="review__img">
+                                    <picture class="review__img">
+                                        <source srcset="./img/product.webp" type="image/webp">
+                                        <source srcset="./img/product.png" type="image/png">
+                                        <img src="./img/product.png" alt="Фото товара">
+                                    </picture>
                                 </div>
                                 <div class="review__body">
                                     <span class="review__title">Пирог с яблоком и ежевикой</span>
@@ -689,7 +734,11 @@
                             </div>
                             <div class="swiper-slide review">
                                 <div class="review__img-wrap">
-                                    <img src="./img/product.png" alt="Фото отзыва" class="review__img">
+                                    <picture class="review__img">
+                                        <source srcset="./img/product.webp" type="image/webp">
+                                        <source srcset="./img/product.png" type="image/png">
+                                        <img src="./img/product.png" alt="Фото товара">
+                                    </picture>
                                 </div>
                                 <div class="review__body">
                                     <span class="review__title">Пирог с яблоком и ежевикой</span>
@@ -699,7 +748,11 @@
                             </div>
                             <div class="swiper-slide review">
                                 <div class="review__img-wrap">
-                                    <img src="./img/product.png" alt="Фото отзыва" class="review__img">
+                                    <picture class="review__img">
+                                        <source srcset="./img/product.webp" type="image/webp">
+                                        <source srcset="./img/product.png" type="image/png">
+                                        <img src="./img/product.png" alt="Фото товара">
+                                    </picture>
                                 </div>
                                 <div class="review__body">
                                     <span class="review__title">Пирог с яблоком и ежевикой</span>
