--- a/hearth/delivery.html
+++ b/hearth/delivery.html
@@ -70,9 +70,9 @@
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
-                                                <sapn class="cart__price">8910 р</sapn>
+                                                <span class="cart__price">8910 р</span>
                                             </div>
-                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
+                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                         </div>
                                     </div>
                                 </div>
@@ -83,9 +83,9 @@
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
-                                                <sapn class="cart__price">810 р</sapn>
+                                                <span class="cart__price">810 р</span>
                                             </div>
-                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
+                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                         </div>
                                     </div>
                                 </div>
@@ -96,9 +96,9 @@
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
-                                                <sapn class="cart__price">810 р</sapn>
+                                                <span class="cart__price">810 р</span>
                                             </div>
-                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
+                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                         </div>
                                     </div>
                                 </div>
