--- a/hearth/index.html
+++ b/hearth/index.html
@@ -74,9 +74,9 @@
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
-                                                <sapn class="cart__price">8910 р</sapn>
+                                                <span class="cart__price">8910 р</span>
                                             </div>
-                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
+                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                         </div>
                                     </div>
                                 </div>
@@ -91,9 +91,9 @@
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
-                                                <sapn class="cart__price">810 р</sapn>
+                                                <span class="cart__price">810 р</span>
                                             </div>
-                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
+                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                         </div>
                                     </div>
                                 </div>
@@ -108,9 +108,9 @@
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
-                                                <sapn class="cart__price">810 р</sapn>
+                                                <span class="cart__price">810 р</span>
                                             </div>
-                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
+                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                         </div>
                                     </div>
                                 </div>
@@ -430,7 +430,7 @@
                                 </div>
                             </fieldset>
                             <div class="product__bottom">
-                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
+                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                 <button type="submit" class="button button_product">В корзину</button>
                             </div>
                         </form>
@@ -478,7 +478,7 @@
                                 </div>
                             </fieldset>
                             <div class="product__bottom">
-                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
+                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                 <button type="submit" class="button button_product">В корзину</button>
                             </div>
                         </form>
@@ -526,7 +526,7 @@
                                 </div>
                             </fieldset>
                             <div class="product__bottom">
-                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
+                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                 <button type="submit" class="button button_product">В корзину</button>
                             </div>
                         </form>
@@ -574,7 +574,7 @@
                                 </div>
                             </fieldset>
                             <div class="product__bottom">
-                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
+                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                 <button type="submit" class="button button_product">В корзину</button>
                             </div>
                         </form>
@@ -622,7 +622,7 @@
                                 </div>
                             </fieldset>
                             <div class="product__bottom">
-                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
+                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                 <button type="submit" class="button button_product">В корзину</button>
                             </div>
                         </form>
@@ -670,7 +670,7 @@
                                 </div>
                             </fieldset>
                             <div class="product__bottom">
-                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
+                                <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                 <button type="submit" class="button button_product">В корзину</button>
                             </div>
                         </form>
