--- a/hearth/item.html
+++ b/hearth/item.html
@@ -13,9 +13,9 @@
 <body>
     <header class="header">
         <button class="burger js-burger">
-            <div class="burger__icon">
+            <span class="burger__icon">
                 <span></span>
-            </div>
+            </span>
             <span class="burger__text">Меню</span>
         </button>
         <div class="container">
@@ -52,10 +52,10 @@
                         </div>
                     </div>
                     <button class="header__cart js-open-cart">
-                        <div class="header__cart-ico">
+                        <span class="header__cart-ico">
                             <img src="./img/icons/cart.svg" alt="Иконка корзины">
                             <span class="header__cart-amount">12</span>
-                        </div>
+                        </span>
                         <span class="header__cart-total">9999 P</span>
                     </button>
                     <div class="cart js-cart">
@@ -70,9 +70,9 @@
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
-                                                <sapn class="cart__price">8910 р</sapn>
+                                                <span class="cart__price">8910 р</span>
                                             </div>
-                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
+                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                         </div>
                                     </div>
                                 </div>
@@ -83,9 +83,9 @@
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
-                                                <sapn class="cart__price">810 р</sapn>
+                                                <span class="cart__price">810 р</span>
                                             </div>
-                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
+                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                         </div>
                                     </div>
                                 </div>
@@ -96,9 +96,9 @@
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
-                                                <sapn class="cart__price">810 р</sapn>
+                                                <span class="cart__price">810 р</span>
                                             </div>
-                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric" min="1" value="1"><span class="product__inc js-product-inc">+</span></span>
+                                            <span class="product__count"><span class="product__dec js-product-dec">-</span><input type="text" inputmode="numeric"  value="1"><span class="product__inc js-product-inc">+</span></span>
                                         </div>
                                     </div>
                                 </div>
