--- a/hearth/index.html
+++ b/hearth/index.html
@@ -255,7 +255,6 @@
                             <div class="promo__sticker">
                                 <span>-20%</span>
                             </div>
-                            <img src="./img/promo_bg.png" alt="" class="promo__bg">
                             <picture class="promo__bg">
                                 <source srcset="./img/promo_bg.webp" type="image/webp">
                                 <source srcset="./img/promo_bg.png" type="image/png">
@@ -271,7 +270,11 @@
                             <div class="promo__sticker">
                                 <span>-20%</span>
                             </div>
-                            <img src="./img/promo_bg.png" alt="" class="promo__bg">
+                            <picture class="promo__bg">
+                                <source srcset="./img/promo_bg.webp" type="image/webp">
+                                <source srcset="./img/promo_bg.png" type="image/png">
+                                <img src="./img/promo_bg.png" alt="Фон">
+                            </picture>
                         </div>
                         <div class="swiper-slide promo__item">
                             <div class="promo__content">
@@ -282,7 +285,11 @@
                             <div class="promo__sticker">
                                 <span>-20%</span>
                             </div>
-                            <img src="./img/promo_bg.png" alt="" class="promo__bg">
+                            <picture class="promo__bg">
+                                <source srcset="./img/promo_bg.webp" type="image/webp">
+                                <source srcset="./img/promo_bg.png" type="image/png">
+                                <img src="./img/promo_bg.png" alt="Фон">
+                            </picture>
                         </div>
                     </div>
                     <div class="promo__pagination"></div>
