--- a/hearth/item.html
+++ b/hearth/item.html
@@ -66,7 +66,11 @@
                                 <div class="cart__item">
                                     <div class="cart__name">С сыром осетинским</div>
                                     <div class="cart__content">
-                                        <img src="./img/product.png" alt="Фото товара" class="cart__img">
+                                        <picture class="cart__img">
+                                            <source srcset="./img/product.webp" type="image/webp">
+                                            <source srcset="./img/product.png" type="image/png">
+                                            <img src="./img/product.png" alt="Фото товара">
+                                        </picture>
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
@@ -79,7 +83,11 @@
                                 <div class="cart__item">
                                     <div class="cart__name">С сыром осетинским</div>
                                     <div class="cart__content">
-                                        <img src="./img/product.png" alt="Фото товара" class="cart__img">
+                                        <picture class="cart__img">
+                                            <source srcset="./img/product.webp" type="image/webp">
+                                            <source srcset="./img/product.png" type="image/png">
+                                            <img src="./img/product.png" alt="Фото товара">
+                                        </picture>
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
@@ -92,7 +100,11 @@
                                 <div class="cart__item">
                                     <div class="cart__name">С сыром осетинским</div>
                                     <div class="cart__content">
-                                        <img src="./img/product.png" alt="Фото товара" class="cart__img">
+                                        <picture class="cart__img">
+                                            <source srcset="./img/product.webp" type="image/webp">
+                                            <source srcset="./img/product.png" type="image/png">
+                                            <img src="./img/product.png" alt="Фото товара">
+                                        </picture>
                                         <div class="cart__info">
                                             <div class="cart__info-top">
                                                 <span class="cart__parameters">1200 гр 35∅</span>
