--- a/hearth/index.html
+++ b/hearth/index.html
@@ -13,9 +13,9 @@
 <body>
     <header class="header">
         <button class="burger js-burger">
-            <div class="burger__icon">
+            <span class="burger__icon">
                 <span></span>
-            </div>
+            </span>
             <span class="burger__text">Меню</span>
         </button>
         <div class="container">
@@ -52,10 +52,10 @@
                         </div>
                     </div>
                     <button class="header__cart js-open-cart">
-                        <div class="header__cart-ico">
+                        <span class="header__cart-ico">
                             <img src="./img/icons/cart.svg" alt="Иконка корзины">
                             <span class="header__cart-amount">12</span>
-                        </div>
+                        </span>
                         <span class="header__cart-total">9999 P</span>
                     </button>
                     <div class="cart js-cart">
